fix on too long name

--- a/popup/style.css
+++ b/popup/style.css
@@ -277,3 +277,9 @@ div.japscan-selector {
     margin-top: 10px;
     font-weight: bold;
 }
+
+h3.manga-title {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: pre-wrap;
+}
